# storage-python-sdk

./: .gitignore  README.md  pyproject.toml  sdk-downloaded.txt  setup.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
najumi_storage/: __init__.py  client.py  delete.py  download.py  files.py  stats.py  upload.py
najumi_storage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
